--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <link rel="atyleshet" hrfe="styles.css"
 
 
-
-
-
   <title>AluraFlix</title>
   </head>  
 
@@ -14,3 +11,40 @@
 
     
   </body>
+        <header>Aleraflix</header>
+
+        <section class="chamada">
+            <div class="chamada-texto">
+                 <hl>ATRAVÈS DO ARANHAVERSO</hl>
+                 <p>#homem-aranha</p>
+            </div>
+
+            <div>
+               
+
+
+
+            </div>
+        </section>
+    <body>
+    <section class="categoria">
+      <h2>Filmes e séries</h2>
+      <div class="categoria-videos"
+     </a href="https//www.youtube.com/watch?v=cs15qGGGjc"
+          <img src="https//img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg"
+    </a>
+    </a href="https//www.youtube.com/watch?v=nCmIwcycUJ8"
+          <img src="https//img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg"
+  </a>
+     </a href="https//www.youtube.com/watch?v=FvRmEapoHRc"
+          <img src="https//img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg"   
+  </a>
+      </a href="https//www.youtube.com/watch?v=cs15qGGGjc"
+          <img src="https//img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg"
+  
+  </a>
+      </a href="https//www.youtube.com/watch?v=cs15qGGGjc"
+          <img src="https//img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg"
+
+    </div>
+     </section>
